@@ -1,3 +1,12 @@
+2008-10-17  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* include/openbabel/chains.h, src/chains.cpp: some changes from
+	experimental branch, mainly documentation and some bug fixes.
+
+	* src/formats/atomrecord.cpp: Interpret HG11, HE11, ... as hydrogen
+	atoms at position gamma and epsilon. Previously these atom ids were
+	interpreted as Hg and He atoms. (Fixes: #2002557 & #2026265)
+
 2008-10-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* src/forcefields/forcefieldmmff94.cpp: Remove _logbuf[100] (Fixes
